# XGBoost-Federated-Learning-Analysis

./: .gitignore  README.md  analysis_xgb.py  client_app.py  generate_tables.py  partitioner.ipynb  pyproject.toml  run_configuration.py  run_experiments.py  server_app.py  strategy.py  strategy_mixin.py  task.py
other_scripts/: generate_tables.py  partitioner.ipynb
results/tables/: table_1_iid_full.md  table_2_non_iid_a04_full.md  table_3_non_iid_a08_full.md  table_5_non_iid_a04_frac08.md  table_6_non_iid_a08_frac08.md  table_8_non_iid_a04_frac07.md  table_9_non_iid_a08_frac07.md
tables/: table_1_iid.md  table_2_non_iid_a04.md  table_3_non_iid_a08.md
