[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xgboost-fl"
version = "1.0.0"
description = "Federated Learning with XGBoost and Flower"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.20.0",
    "flwr-datasets>=0.5.0",
    "xgboost>=2.0.0",
    "scikit-learn",
    "pandas"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "samuelelolli"

[tool.flwr.app.components]
serverapp = "server_app:app"
clientapp = "client_app:app"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 8 
options.backend.client-resources.num-cpus = 2